tests/paczka1/fuzzy1/67557459.err
Error in line 2: S209 A915 8,6
Error in line 3: S209 S209 16,4
Error in line 16: Y1HIXCZ1 S872 22,5
Error in line 15: 5zADgo S872 42,8
Error in line 21: S209 S872 18,4
Error in line 26: xNBG S872 93,5
Error in line 33: 5zADgo S872 12,4
Error in line 18: qlQdSUGtFDO A915 106,6
